# Zarco-Hernandez-Evandher-Joel

./: ${var  .gitignore
Gazebo/Espacio_virtual/: Mundo_mesa_y_cajas  Reporte__EntornoVitual_ZHEJ.ipynb  model.config  model.sdf
Reportes/: Reporte de la práctica 1.md
Reportes/Primera practica/: Práctica 1.ipynb  Reporte de la práctica 1.md
Reportes/imagenes_P1/: _robot_
examen_bringup/: CMakeLists.txt
examen_bringup/launch/: simple_position_controller.launch.py
examen_description/: CMakeLists.txt
examen_description/urdf/: scara_basic_position_controller.xacro  scara_gz_propierties.xacro  scara_urdf.xacro
install/: setup.sh
install/examen_description/share/examen_description/launch/: scara_display.launch.xml
install/examen_description/share/examen_description/rviz/: scara_rviz.rviz
install/examen_description/share/examen_description/urdf/: scara_simple_controller.xacro
install/practica1_description/share/practica1_description/: package.xml
install/practica1_description/share/practica1_description/urdf/: basic_link.urdf
log/: latest_build
practica1_description/: CMakeLists.txt
practica1_description/launch/: basic_link_display.launch.xml
practica1_description/rviz/: basic_link_display.rviz
practica1_description/urdf/: basic_link.urdf
